--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
+    "@material-ui/core": "^4.2.0",
     "chroma-js": "^2.0.4",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
