--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/runtime": "7.0.0-beta.55",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.2.0",
     "chroma-js": "^2.0.4",
     "rc-slider": "^8.6.13",
     "react": "^16.8.6",
