--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
